add 3dunet training - working with halved images : TODO: Try patching

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -8,11 +8,338 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import torch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "from util.data import get_dl, get_train_ds, get_val_ds\n",
+    "from util.training_utils import train, check_accuracy, save, load\n",
+    "from models.Base3DUNet import Base3DUNet\n",
+    "from util.loss import DiceLoss"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 4\n",
+    "EPOCHS = 10\n",
+    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "LR = 0.0001\n",
+    "# DEVICE = 'cpu'"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images: 221, masks: 221 \n",
+      "images: 148, masks: 148 \n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dl = get_dl(get_train_ds(), BATCH_SIZE,nw=2)\n",
+    "val_dl = get_dl(get_val_ds(), BATCH_SIZE, nw=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "89"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gc\n",
+    "torch.cuda.empty_cache()\n",
+    "gc.collect()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base3DUNet(\n",
+      "  (pooling): MaxPool3d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (downs): ModuleList(\n",
+      "    (0): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(3, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(64, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (1): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(64, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(128, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (2): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(128, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(256, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (3): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(256, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(512, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (ups): ModuleList(\n",
+      "    (0): ConvTranspose3d(1024, 512, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (1): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(1024, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(512, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (2): ConvTranspose3d(512, 256, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (3): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(512, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(256, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (4): ConvTranspose3d(256, 128, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (5): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(256, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(128, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (6): ConvTranspose3d(128, 64, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (7): DoubleConv3D(\n",
+      "      (conv): Sequential(\n",
+      "        (0): Conv3d(128, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (1): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU(inplace=True)\n",
+      "        (3): Conv3d(64, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (4): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (5): ReLU(inplace=True)\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (bottleneck): DoubleConv3D(\n",
+      "    (conv): Sequential(\n",
+      "      (0): Conv3d(512, 1024, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "      (1): BatchNorm3d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): ReLU(inplace=True)\n",
+      "      (3): Conv3d(1024, 1024, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "      (4): BatchNorm3d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (5): ReLU(inplace=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (output_conv): Conv3d(64, 3, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512]).to(DEVICE)\n",
+    "print(model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total parameters = 90302147\n",
+      "total learnable parameters = 90302147\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f\"total parameters = {sum(p.numel() for p in model.parameters())}\")\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "opt = torch.optim.Adam(model.parameters(), lr=LR)\n",
+    "# loss = torch.nn.BCEWithLogitsLoss # cannot be used because there's a lot of imbalance anyway, so it is better to combine it with dice\n",
+    "loss = DiceLoss()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(DEVICE)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "At epoch [1/10]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.958]\n",
+      "At epoch [2/10]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.944]\n",
+      "At epoch [3/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.949]\n",
+      "At epoch [4/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.827]\n",
+      "At epoch [5/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.978]\n",
+      "At epoch [6/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.931]\n",
+      "At epoch [7/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.961]\n",
+      "At epoch [8/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.887]\n",
+      "At epoch [9/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.919]\n",
+      "At epoch [10/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.746]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results: 112503139/116391936 with accuracy 96.6589\n",
+      "Dice score: 0.47057220339775085\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_accuracy(val_dl,model,DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "# saving sample\n",
+    "save(model,\"weights/3D/t2\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "# loading sample\n",
+    "model1 = Base3DUNet(3,3)\n",
+    "load(model,\"weights/3D/t1\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
