fix 3dUnet test

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 4\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 50\n",
     "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
    "metadata": {
@@ -77,7 +77,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "89"
+      "text/plain": "75"
      },
      "execution_count": 6,
      "metadata": {},
@@ -270,22 +270,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "At epoch [1/10]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.958]\n",
-      "At epoch [2/10]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.944]\n",
-      "At epoch [3/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.949]\n",
-      "At epoch [4/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.827]\n",
-      "At epoch [5/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.978]\n",
-      "At epoch [6/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.931]\n",
-      "At epoch [7/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.961]\n",
-      "At epoch [8/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.887]\n",
-      "At epoch [9/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.919]\n",
-      "At epoch [10/10]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.746]\n"
+      "At epoch [1/50]: 100%|██████████| 56/56 [01:20<00:00,  1.44s/it, loss=0.987]\n",
+      "At epoch [2/50]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.842]\n",
+      "At epoch [3/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.81] \n",
+      "At epoch [4/50]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.945]\n",
+      "At epoch [5/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.738]\n",
+      "At epoch [6/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.791]\n",
+      "At epoch [7/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.805]\n",
+      "At epoch [8/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.764]\n",
+      "At epoch [9/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.675]\n",
+      "At epoch [10/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.635]\n",
+      "At epoch [11/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.78] \n",
+      "At epoch [12/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.484]\n",
+      "At epoch [13/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.856]\n",
+      "At epoch [14/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.446]\n",
+      "At epoch [15/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.564]\n",
+      "At epoch [16/50]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.472]\n",
+      "At epoch [17/50]:  23%|██▎       | 13/56 [00:24<01:14,  1.73s/it, loss=0.5]  "
      ]
     }
    ],
@@ -293,27 +300,24 @@
     "train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results: 112503139/116391936 with accuracy 96.6589\n",
-      "Dice score: 0.47057220339775085\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "check_accuracy(val_dl,model,DEVICE)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
